[project]
name = "prompting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "matplotlib>=3.7",
    "mirascope[openai]>=1.0.0",
    "openai>=1.0",
    "pandas>=2.0",
    "pandas-stubs==2.3.0.250703",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "seaborn>=0.13",
    "lilypad-sdk[anthropic,azure,bedrock,google,mistral,openai]>=0.1.0",
]
